// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector - Demo Check mode 1`] = `
<div class="md-example-child md-example-child-selector md-example-child-selector-3">
  <div class="md-selector is-check">
    <div class="md-popup inner-popup with-mask bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">Check模式</p>
            <!---->
          </div>
          <div class="title-bar-right md-popup-confirm">确认</div>
        </div>
        <div class="md-selector-container">
          <div class="md-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="md-radio-list md-selector-list">
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item no-border">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Confirmed mode 1`] = `
<div class="md-example-child md-example-child-selector md-example-child-selector-2">
  <div class="md-selector is-normal">
    <div class="md-popup inner-popup with-mask bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">确认模式</p>
            <!---->
          </div>
          <div class="title-bar-right md-popup-confirm">确认</div>
        </div>
        <div class="md-selector-container">
          <div class="md-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="md-radio-list md-selector-list">
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body multilines">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项一</p>
                      <p class="md-cell-item-brief">选项一说明</p>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body multilines">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项二</p>
                      <p class="md-cell-item-brief">选项二说明</p>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body multilines">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项三</p>
                      <p class="md-cell-item-brief">选项三说明</p>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item no-border">
                  <div class="md-cell-item-body multilines">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项四</p>
                      <p class="md-cell-item-brief">选项四说明</p>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Custom options 1`] = `
<div class="md-example-child md-example-child-selector md-example-child-selector-1">
  <div class="md-selector is-normal">
    <div class="md-popup inner-popup with-mask bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel"><i class="md-icon icon-font md-icon-close close lg" style="color:;"></i></div>
          <div class="title-bar-title">
            <p class="title">自定义选项</p>
            <!---->
          </div>
          <!---->
        </div>
        <div class="md-selector-container">
          <div class="md-scroll-view" style="max-height:auto;min-height:auto;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="md-radio-list md-selector-list">
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <!---->
                      <!---->
                      <div class="md-selector-custom-brief">选项一使用slot-scope</div>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <!---->
                      <!---->
                      <div class="md-selector-custom-brief">选项二使用slot-scope</div>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <!---->
                      <!---->
                      <div class="md-selector-custom-brief">选项三使用slot-scope</div>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item no-border">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <!---->
                      <!---->
                      <div class="md-selector-custom-brief">选项四使用slot-scope</div>
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Multi mode 1`] = `
<div class="md-example-child md-example-child-selector md-example-child-selector-4">
  <div class="md-selector is-normal">
    <div class="md-popup inner-popup with-mask bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">多选模式</p>
            <!---->
          </div>
          <div class="title-bar-right md-popup-confirm">确定</div>
        </div>
        <div class="md-selector-container">
          <div class="md-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="md-check-group md-check-list md-selector-list">
                <div class="md-cell-item md-check-item is-checked">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-check is-checked">
                        <div class="md-check-icon"><i class="md-icon icon-font md-icon-checked checked md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-check-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-check">
                        <div class="md-check-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-check-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-check">
                        <div class="md-check-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-check-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-check">
                        <div class="md-check-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo No need to confirm 1`] = `
<div class="md-example-child md-example-child-selector md-example-child-selector-0">
  <div class="md-selector is-normal">
    <div class="md-popup inner-popup with-mask bottom" style="display:none;">
      <div name="md-mask-fade" class="md-popup-mask" style="display:none;"></div>
      <div name="md-slide-up" class="md-popup-box md-slide-up" style="display:none;">
        <div class="md-popup-title-bar">
          <div class="title-bar-left md-popup-cancel"><i class="md-icon icon-font md-icon-close close lg" style="color:;"></i></div>
          <div class="title-bar-title">
            <p class="title">普通模式</p>
            <!---->
          </div>
          <!---->
        </div>
        <div class="md-selector-container">
          <div class="md-scroll-view" style="max-height:320px;min-height:auto;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="md-radio-list md-selector-list">
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item is-selected">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio is-checked">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-checked checked md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项五</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项六</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项七</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项八</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项九</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="md-cell-item md-radio-item no-border">
                  <div class="md-cell-item-body">
                    <!---->
                    <div class="md-cell-item-content">
                      <p class="md-cell-item-title">选项十</p>
                      <!---->
                    </div>
                    <div class="md-cell-item-right"><label class="md-radio">
                        <div class="md-radio-icon"><i class="md-icon icon-font md-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
